# fabric-protos-python

./: MAINTAINERS.md  README.md  pyproject.toml
common/: collection_pb2.py  common_pb2.py  configtx_pb2.py  ledger_pb2.py
discovery/: protocol_pb2_grpc.py
fabric_protos_python/common/: policies_pb2.py
fabric_protos_python/discovery/: protocol_pb2.py
fabric_protos_python/gateway/: gateway_pb2.py  gateway_pb2_grpc.py
fabric_protos_python/gossip/: message_pb2.py  message_pb2_grpc.py
fabric_protos_python/ledger/rwset/kvrwset/: kv_rwset_pb2.py
fabric_protos_python/orderer/: ab_pb2.py  ab_pb2_grpc.py  cluster_pb2.py  cluster_pb2_grpc.py
fabric_protos_python/peer/: chaincode_shim_pb2.py  chaincode_shim_pb2_grpc.py  events_pb2.py  events_pb2_grpc.py  peer_pb2_grpc.py  proposal_response_pb2.py  query_pb2.py  resources_pb2.py  snapshot_pb2.py  snapshot_pb2_grpc.py
fabric_protos_python/peer/lifecycle/: lifecycle_pb2.py
gateway/: gateway_pb2.py
gossip/: message_pb2.py
ledger/rwset/kvrwset/: kv_rwset_pb2.py
peer/: chaincode_pb2.py  chaincode_shim_pb2.py  collection_pb2.py  peer_pb2.py  policy_pb2.py  proposal_pb2.py  proposal_response_pb2.py  query_pb2.py  signed_cc_dep_spec_pb2.py  transaction_pb2.py
peer/lifecycle/: lifecycle_pb2.py
transientstore/: transientstore_pb2.py
